@@ -50,10 +50,10 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
   private Key _actual_best_model_key;
 
   // return the most up-to-date model metrics
-  Errors last_scored() { return errors[errors.length-1]; }
+  Errors last_scored() { return errors == null ? null : errors[errors.length-1]; }
 
   @Override public final DeepLearning get_params() { return model_info.get_params(); }
-  @Override public final Request2 job() { return get_params(); }
+  @Override public final Request2 job() { return model_info.get_job(); }
 
   @Override protected double missingColumnsType() { return get_params().sparse ? 0 : Double.NaN; }
 
@@ -207,6 +207,7 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
     private Neurons.DenseRowMatrix[] dense_row_weights; //one 2D weight matrix per layer (stored as a 1D array each)
     private Neurons.DenseColMatrix[] dense_col_weights; //one 2D weight matrix per layer (stored as a 1D array each)
     private Neurons.DenseVector[] biases; //one 1D bias array per layer
+    private Neurons.DenseVector[] avg_activations; //one 1D array per layer
 
     // helpers for storing previous step deltas
     // Note: These two arrays *could* be made transient and then initialized freshly in makeNeurons() and in DeepLearningTask.initLocal()
@@ -241,9 +242,9 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
     public final Neurons.DenseVector get_biases_ada_dx_g(int i) { return biases_ada_dx_g[i]; }
 
     @API(help = "Model parameters", json = true)
-    private Job job;
+    private Request2 job;
     public final DeepLearning get_params() { return (DeepLearning)job; }
-    public final Job get_job() { return job; }
+    public final Request2 get_job() { return job; }
 
     @API(help = "Mean rate", json = true)
     private float[] mean_rate;
@@ -313,6 +314,11 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
       // biases (only for hidden layers and output layer)
       biases = new Neurons.DenseVector[layers+1];
       for (int i=0; i<=layers; ++i) biases[i] = new Neurons.DenseVector(units[i+1]);
+      // average activation (only for hidden layers)
+      if (get_params().autoencoder) {
+        avg_activations = new Neurons.DenseVector[layers];
+        for (int i = 0; i < layers; ++i) avg_activations[i] = new Neurons.DenseVector(units[i + 1]);
+      }
       fillHelpers();
       // for diagnostics
       mean_rate = new float[units.length];
@@ -378,7 +384,10 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
             continue;
           }
           else if (i < neurons.length-1) {
-            sb.append("  " + Utils.formatPct(neurons[i].params.hidden_dropout_ratios[i - 1]) + " ");
+            if (neurons[i].params.hidden_dropout_ratios == null)
+              sb.append("  " + Utils.formatPct(0) + " ");
+            else
+              sb.append("  " + Utils.formatPct(neurons[i].params.hidden_dropout_ratios[i - 1]) + " ");
           } else {
             sb.append("          ");
           }
@@ -444,6 +453,9 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
       for (int i=0;i<dense_row_weights.length;++i)
         Utils.add(get_weights(i).raw(), other.get_weights(i).raw());
       for (int i=0;i<biases.length;++i) Utils.add(biases[i].raw(), other.biases[i].raw());
+      if (avg_activations != null)
+        for (int i=0;i<avg_activations.length;++i)
+          Utils.add(avg_activations[i].raw(), other.biases[i].raw());
       if (has_momenta()) {
         assert(other.has_momenta());
         for (int i=0;i<dense_row_weights_momenta.length;++i)
@@ -463,6 +475,9 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
       for (int i=0; i<dense_row_weights.length; ++i)
         Utils.div(get_weights(i).raw(), N);
       for (Neurons.Vector bias : biases) Utils.div(bias.raw(), N);
+      if (avg_activations != null)
+        for (Neurons.Vector avgac : avg_activations)
+          Utils.div(avgac.raw(), N);
       if (has_momenta()) {
         for (int i=0; i<dense_row_weights_momenta.length; ++i)
           Utils.div(get_weights_momenta(i).raw(), N);
@@ -678,10 +693,12 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
       get_params().state = ((DeepLearning)UKV.get(jobKey)).state; //make the job state consistent
     else
       get_params().state = ((Job.JobHandle)UKV.get(jobKey)).state; //make the job state consistent
-    errors = new Errors[1];
-    errors[0] = new Errors();
-    errors[0].validation = (params.validation != null);
-    errors[0].num_folds = params.n_folds;
+    if (!get_params().autoencoder) {
+      errors = new Errors[1];
+      errors[0] = new Errors();
+      errors[0].validation = (params.validation != null);
+      errors[0].num_folds = params.n_folds;
+    }
     assert(Arrays.equals(_key._kb, destKey._kb));
   }
 
@@ -733,11 +750,11 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
           if (printme) Log.info("Scoring the auto-encoder.");
           // training
           {
-            final Frame l2_frame = scoreAutoEncoder(ftrain);
-            final Vec l2 = l2_frame.anyVec();
+            final Frame mse_frame = scoreAutoEncoder(ftrain);
+            final Vec l2 = mse_frame.anyVec();
             Log.info("Mean reconstruction error on training data: " + l2.mean() + "\n");
             err.train_mse = l2.mean();
-            l2_frame.delete();
+            mse_frame.delete();
           }
         } else {
           if (printme) Log.info("Scoring the model.");
@@ -924,7 +941,7 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
   }
 
   /**
-   * This is called from Model.score(). Make either a prediction or a reconstruction.
+   * This is an overridden version of Model.score(). Make either a prediction or a reconstruction.
    * @param frame Test dataset
    * @return A frame containing the prediction or reconstruction
    */
@@ -934,14 +951,22 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
       return super.score(frame);
     } else {
       // Reconstruction
-      Frame fr = new Frame(frame);
+      // Adapt the Frame layout - returns adapted frame and frame containing only
+      // newly created vectors
+      Frame[] adaptFrms = adapt(frame,false,false/*no response*/);
+      // Adapted frame containing all columns - mix of original vectors from fr
+      // and newly created vectors serving as adaptors
+      Frame adaptFrm = adaptFrms[0];
+      // Contains only newly created vectors. The frame eases deletion of these vectors.
+      Frame onlyAdaptFrm = adaptFrms[1];
+
       final int len = model_info().data_info().fullN();
       String prefix = "reconstr_";
       assert(model_info().data_info()._responses == 0);
       String[] coefnames = model_info().data_info().coefNames();
       assert(len == coefnames.length);
       for( int c=0; c<len; c++ )
-        fr.add(prefix+coefnames[c],fr.anyVec().makeZero());
+        adaptFrm.add(prefix+coefnames[c],adaptFrm.anyVec().makeZero());
       new MRTask2() {
         @Override public void map( Chunk chks[] ) {
           double tmp [] = new double[_names.length];
@@ -953,11 +978,13 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
               chks[_names.length+c].set0(row,p[c]);
           }
         }
-      }.doAll(fr);
+      }.doAll(adaptFrm);
 
-      // Return just the output columns
-      int x=_names.length, y=fr.numCols();
-      return fr.extractFrame(x, y);
+      // Return the predicted columns
+      int x=_names.length, y=adaptFrm.numCols();
+      Frame f = adaptFrm.extractFrame(x, y); //this will call vec_impl() and we cannot call the delete() below just yet
+      onlyAdaptFrm.delete();
+      return f;
     }
   }
 
@@ -996,7 +1023,7 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
   /**
    * Score auto-encoded reconstruction (on-the-fly, without allocating the reconstruction as done in Frame score(Frame fr))
    * @param frame Original data (can contain response, will be ignored)
-   * @return Frame containing one Vec with L2 norm (MSE) of each reconstructed row, caller is responsible for deletion
+   * @return Frame containing one Vec with reconstruction error (MSE) of each reconstructed row, caller is responsible for deletion
    */
   public Frame scoreAutoEncoder(Frame frame) {
     final int len = _names.length;
@@ -1008,7 +1035,7 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
     Frame adaptFrm = adaptFrms[0];
     // Contains only newly created vectors. The frame eases deletion of these vectors.
     Frame onlyAdaptFrm = adaptFrms[1];
-    adaptFrm.add("L2", adaptFrm.anyVec().makeZero());
+    adaptFrm.add("Reconstruction.MSE", adaptFrm.anyVec().makeZero());
     new MRTask2() {
       @Override public void map( Chunk chks[] ) {
         double tmp [] = new double[len];
@@ -1034,15 +1061,15 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
     assert(tmp.length == _names.length);
     for( int i=0; i<tmp.length; i++ )
       tmp[i] = chks[i].at0(row_in_chunk);
-    score_autoencoder(tmp, preds, neurons); // this fills preds, returns L2 error (ignored here)
+    score_autoencoder(tmp, preds, neurons); // this fills preds, returns MSE error (ignored here)
     return preds;
   }
 
   /**
-   * Helper to reconstruct original data into preds array and compute the L2 reconstruction error (MSE)
+   * Helper to reconstruct original data into preds array and compute the reconstruction error (MSE)
    * @param data Original data (unexpanded)
    * @param preds Reconstruction (potentially expanded)
-   * @return L2 reconstruction error
+   * @return reconstruction error
    */
   private double score_autoencoder(double[] data, float[] preds, Neurons[] neurons) {
     assert(model_info().get_params().autoencoder);
@@ -1057,7 +1084,7 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
 
     // First normalize categorical reconstructions to be probabilities
     // (such that they can be better compared to the input where one factor was 1 and the rest was 0)
-    model_info().data_info().softMaxCategoricals(out,out); //only modifies the categoricals
+//    model_info().data_info().softMaxCategoricals(out,out); //only modifies the categoricals
 
     // Compute MSE of reconstruction in expanded space (with categorical probabilities)
     double l2 = 0;
@@ -1075,18 +1102,18 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
 
   /**
    * Compute quantile-based threshold (in reconstruction error) to find outliers
-   * @param l2 Vector containing L2 reconstruction errors
+   * @param mse Vector containing reconstruction errors
    * @param quantile Quantile for cut-off
-   * @return Threshold in L2 value for a point to be above the quantile
+   * @return Threshold in MSE value for a point to be above the quantile
    */
-  public double calcOutlierThreshold(Vec l2, double quantile) {
-    Frame l2_frame = new Frame(Key.make(), new String[]{"L2"}, new Vec[]{l2});
+  public double calcOutlierThreshold(Vec mse, double quantile) {
+    Frame mse_frame = new Frame(Key.make(), new String[]{"Reconstruction.MSE"}, new Vec[]{mse});
     QuantilesPage qp = new QuantilesPage();
-    qp.column = l2_frame.vec(0);
-    qp.source_key = l2_frame;
+    qp.column = mse_frame.vec(0);
+    qp.source_key = mse_frame;
     qp.quantile = quantile;
     qp.invoke();
-    DKV.remove(l2_frame._key);
+    DKV.remove(mse_frame._key);
     return qp.result;
   }
 
@@ -1117,7 +1144,7 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
             + water.api.Predict.link(_key, "Score on dataset") + ", "
             + DeepLearning.link(_dataKey, "Compute new model", null, responseName(), val_key)
             + (bestModelKey != null && UKV.get(bestModelKey) != null && bestModelKey != _key ? ", " + DeepLearningModelView.link("Go to best model", bestModelKey) : "")
-            + (jobKey == null || (UKV.get(jobKey) != null && Job.isEnded(jobKey)) ? ", <i class=\"icon-play\"></i>" + DeepLearning.link(_dataKey, "Continue training this model", _key, responseName(), val_key) : "")
+            + (((jobKey != null && UKV.get(jobKey) == null)) || UKV.get(jobKey) != null && Job.isEnded(jobKey) ? ", <i class=\"icon-play\"></i>" + DeepLearning.link(_dataKey, "Continue training this model", _key, responseName(), val_key) : "")
             + "</div>");
 
     DocGen.HTML.paragraph(sb, "Model Key: " + _key);
@@ -1135,6 +1162,8 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
       DocGen.HTML.section(sb, msg);
       DocGen.HTML.section(sb, "=======================================================================================");
     }
+
+    if (error == null) return true;
 
     DocGen.HTML.title(sb, "Progress");
     // update epoch counter every time the website is displayed
@@ -1182,7 +1211,10 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
         }
         else if (i < neurons.length-1) {
           sb.append("<td>");
-          sb.append(Utils.formatPct(neurons[i].params.hidden_dropout_ratios[i - 1]));
+          if (neurons[i].params.hidden_dropout_ratios == null)
+            sb.append(Utils.formatPct(0));
+          else
+            sb.append(Utils.formatPct(neurons[i].params.hidden_dropout_ratios[i - 1]));
           sb.append("</td>");
         } else {
           sb.append("<td></td>");
@@ -1461,7 +1493,251 @@ public class DeepLearningModel extends Model implements Comparable<DeepLearningM
     return true;
   }
 
-  public boolean toJavaHtml(StringBuilder sb) { return false; }
-  @Override public String toJava() { return "Not yet implemented."; }
+  public void toJavaHtml(StringBuilder sb) {
+    sb.append("<br /><br /><div class=\"pull-right\"><a href=\"#\" onclick=\'$(\"#javaModel\").toggleClass(\"hide\");\'" +
+            "class=\'btn btn-inverse btn-mini\'>Java Model</a></div><br /><div class=\"hide\" id=\"javaModel\">");
+
+    boolean featureAllowed = true; //isFeatureAllowed();
+    if (! featureAllowed) {
+      sb.append("<br/><div id=\'javaModelWarningBlock\' class=\"alert\" style=\"background:#eedd20;color:#636363;text-shadow:none;\">");
+      sb.append("<b>You have requested a premium feature and your H<sub>2</sub>O software is unlicensed.</b><br/><br/>");
+      sb.append("Please enter your email address below, and we will send you a trial license shortly.<br/>");
+      sb.append("This will also temporarily enable downloading Java models.<br/>");
+      sb.append("<form class=\'form-inline\'><input id=\"emailForJavaModel\" class=\"span5\" type=\"text\" placeholder=\"Email\"/> ");
+      sb.append("<a href=\"#\" onclick=\'processJavaModelLicense();\' class=\'btn btn-inverse\'>Send</a></form></div>");
+      sb.append("<div id=\"javaModelSource\" class=\"hide\"><pre style=\"overflow-y:scroll;\"><code class=\"language-java\">");
+      DocGen.HTML.escape(sb, toJava());
+      sb.append("</code></pre></div>");
+    }
+    else if( model_info().size() > 100000 ) {
+      String modelName = JCodeGen.toJavaId(_key.toString());
+      sb.append("<pre style=\"overflow-y:scroll;\"><code class=\"language-java\">");
+      sb.append("/* Java code is too large to display, download it directly.\n");
+      sb.append("   To obtain the code please invoke in your terminal:\n");
+      sb.append("     curl http:/").append(H2O.SELF.toString()).append("/h2o-model.jar > h2o-model.jar\n");
+      sb.append("     curl http:/").append(H2O.SELF.toString()).append("/2/").append(this.getClass().getSimpleName()).append("View.java?_modelKey=").append(_key).append(" > ").append(modelName).append(".java\n");
+      sb.append("     javac -cp h2o-model.jar -J-Xmx2g -J-XX:MaxPermSize=128m ").append(modelName).append(".java\n");
+      sb.append("*/");
+      sb.append("</code></pre>");
+    } else {
+      sb.append("<pre style=\"overflow-y:scroll;\"><code class=\"language-java\">");
+      DocGen.HTML.escape(sb, toJava());
+      sb.append("</code></pre>");
+    }
+    sb.append("</div>");
+    sb.append("<script type=\"text/javascript\">$(document).ready(showOrHideJavaModel);</script>");
+  }
+
+  @Override protected SB toJavaInit(SB sb, SB fileContextSB) {
+    sb = super.toJavaInit(sb, fileContextSB);
+    if (model_info().data_info()._nums > 0) {
+      JCodeGen.toStaticVar(sb, "NUMS", new double[model_info().data_info()._nums], "Workspace for storing numerical input variables.");
+      JCodeGen.toStaticVar(sb, "NORMMUL", model_info().data_info()._normMul, "Standardization/Normalization scaling factor for numerical variables.");
+      JCodeGen.toStaticVar(sb, "NORMSUB", model_info().data_info()._normSub, "Standardization/Normalization offset for numerical variables.");
+    }
+    if (model_info().data_info()._cats > 0) {
+      JCodeGen.toStaticVar(sb, "CATS", new int[model_info().data_info()._cats], "Workspace for storing categorical input variables.");
+    }
+    JCodeGen.toStaticVar(sb, "CATOFFSETS", model_info().data_info()._catOffsets, "Workspace for categorical offsets.");
+    if (model_info().data_info()._normRespMul != null) {
+      JCodeGen.toStaticVar(sb, "NORMRESPMUL", model_info().data_info()._normRespMul, "Standardization/Normalization scaling factor for response.");
+      JCodeGen.toStaticVar(sb, "NORMRESPSUB", model_info().data_info()._normRespSub, "Standardization/Normalization offset for response.");
+    }
+    if (get_params().hidden_dropout_ratios != null) {
+      JCodeGen.toStaticVar(sb, "HIDDEN_DROPOUT_RATIOS", get_params().hidden_dropout_ratios, "Hidden layer dropout ratios.");
+    }
+
+    Neurons[] neurons = DeepLearningTask.makeNeuronsForTesting(model_info());
+    int[] layers = new int[neurons.length];
+    for (int i=0;i<neurons.length;++i)
+      layers[i] = neurons[i].units;
+    JCodeGen.toStaticVar(sb, "NEURONS", layers, "Number of neurons for each layer.");
+
+    // activation storage
+    sb.i(1).p("// Storage for neuron activation values.").nl();
+    sb.i(1).p("public static final float[][] ACTIVATION = new float[][] {").nl();
+    for (int i=0; i<neurons.length; i++) {
+      String colInfoClazz = "Activation_"+i;
+      sb.i(2).p("/* ").p(neurons[i].getClass().getSimpleName()).p(" */ ");
+      sb.p(colInfoClazz).p(".VALUES");
+      if (i!=neurons.length-1) sb.p(',');
+      sb.nl();
+      fileContextSB.i().p("// Neuron activation values for ").p(neurons[i].getClass().getSimpleName()).p(" layer").nl();
+      JCodeGen.toClassWithArray(fileContextSB, null, colInfoClazz, new float[layers[i]]);
+    }
+    sb.i(1).p("};").nl();
+
+    // biases
+    sb.i(1).p("// Neuron bias values.").nl();
+    sb.i(1).p("public static final float[][] BIAS = new float[][] {").nl();
+    for (int i=0; i<neurons.length; i++) {
+      String colInfoClazz = "Bias_"+i;
+      sb.i(2).p("/* ").p(neurons[i].getClass().getSimpleName()).p(" */ ");
+      sb.p(colInfoClazz).p(".VALUES");
+      if (i!=neurons.length-1) sb.p(',');
+      sb.nl();
+      fileContextSB.i().p("// Neuron bias values for ").p(neurons[i].getClass().getSimpleName()).p(" layer").nl();
+      float[] bias = i == 0 ? null : new float[model_info().get_biases(i-1).size()];
+      if (i>0) {
+        for (int j=0; j<bias.length; ++j) bias[j] = model_info().get_biases(i-1).get(j);
+      }
+      JCodeGen.toClassWithArray(fileContextSB, null, colInfoClazz, bias);
+    }
+    sb.i(1).p("};").nl();
+
+    // weights
+    sb.i(1).p("// Connecting weights between neurons.").nl();
+    sb.i(1).p("public static final float[][] WEIGHT = new float[][] {").nl();
+    for (int i=0; i<neurons.length; i++) {
+      String colInfoClazz = "Weight_"+i;
+      sb.i(2).p("/* ").p(neurons[i].getClass().getSimpleName()).p(" */ ");
+      sb.p(colInfoClazz).p(".VALUES");
+      if (i!=neurons.length-1) sb.p(',');
+      sb.nl();
+      if (i > 0) {
+        fileContextSB.i().p("// Neuron weights connecting ").
+                p(neurons[i - 1].getClass().getSimpleName()).p(" and ").
+                p(neurons[i].getClass().getSimpleName()).
+                p(" layer").nl();
+      }
+      float[] weights = i == 0 ? null : new float[model_info().get_weights(i-1).rows()*model_info().get_weights(i-1).cols()];
+      if (i>0) {
+        final int rows = model_info().get_weights(i-1).rows();
+        final int cols = model_info().get_weights(i-1).cols();
+        for (int j=0; j<rows; ++j)
+          for (int k=0; k<cols; ++k)
+            weights[j*cols+k] = model_info().get_weights(i-1).get(j,k);
+      }
+      JCodeGen.toClassWithArray(fileContextSB, null, colInfoClazz, weights);
+    }
+    sb.i(1).p("};").nl();
+
+    return sb;
+  }
+
+  @Override protected void toJavaPredictBody( final SB bodySb, final SB classCtxSb, final SB fileCtxSb) {
+    SB model = new SB();
+    bodySb.i().p("java.util.Arrays.fill(preds,0f);").nl();
+    final int cats = model_info().data_info()._cats;
+    final int nums = model_info().data_info()._nums;
+    // initialize input layer
+    if (nums > 0) bodySb.i().p("java.util.Arrays.fill(NUMS,0f);").nl();
+    if (cats > 0) bodySb.i().p("java.util.Arrays.fill(CATS,0);").nl();
+    bodySb.i().p("int i = 0, ncats = 0;").nl();
+    if (cats > 0) {
+      bodySb.i().p("for(; i<"+cats+"; ++i) {").nl();
+      bodySb.i(1).p("if (!Double.isNaN(data[i])) {").nl();
+      bodySb.i(2).p("int c = (int) data[i];").nl();
+      if (model_info().data_info()._useAllFactorLevels)
+        bodySb.i(2).p("CATS[ncats++] = c + CATOFFSETS[i];").nl();
+      else
+        bodySb.i(2).p("if (c != 0) CATS[ncats++] = c + CATOFFSETS[i] - 1;").nl();
+      bodySb.i(1).p("}").nl();
+      bodySb.i().p("}").nl();
+    }
+    if (nums > 0) {
+      bodySb.i().p("final int n = data.length;").nl();
+      bodySb.i().p("for(; i<n; ++i) {").nl();
+        bodySb.i(1).p("NUMS[i" + (cats > 0 ? "-" + cats : "") + "] = Double.isNaN(data[i]) ? 0 : ");
+      if (model_info().data_info()._normMul != null) {
+        bodySb.p("(data[i] - NORMSUB[i" + (cats > 0 ? "-" + cats : "") + "])*NORMMUL[i" + (cats > 0 ? "-" + cats : "") + "];").nl();
+      } else {
+        bodySb.p("data[i];").nl();
+      }
+      bodySb.i(0).p("}").nl();
+    }
+    if (cats > 0) {
+      bodySb.i().p("for (i=0; i<ncats; ++i) ACTIVATION[0][CATS[i]] = 1f;").nl();
+    }
+    if (nums > 0) {
+      bodySb.i().p("for (i=0; i<NUMS.length; ++i) {").nl();
+        bodySb.i(1).p("ACTIVATION[0][CATOFFSETS[CATOFFSETS.length-1] + i] = Double.isNaN(NUMS[i]) ? 0f : (float) NUMS[i];").nl();
+      bodySb.i().p("}").nl();
+    }
+
+    boolean tanh=(get_params().activation == DeepLearning.Activation.Tanh || get_params().activation == DeepLearning.Activation.TanhWithDropout);
+    boolean relu=(get_params().activation == DeepLearning.Activation.Rectifier || get_params().activation == DeepLearning.Activation.RectifierWithDropout);
+    boolean maxout=(get_params().activation == DeepLearning.Activation.Maxout || get_params().activation == DeepLearning.Activation.MaxoutWithDropout);
+
+    // make prediction: forward propagation
+    bodySb.i().p("for (i=1; i<ACTIVATION.length; ++i) {").nl();
+    bodySb.i(1).p("java.util.Arrays.fill(ACTIVATION[i],0f);").nl();
+    if (maxout) {
+      bodySb.i(1).p("float rmax = 0;").nl();
+    }
+    bodySb.i(1).p("for (int r=0; r<ACTIVATION[i].length; ++r) {").nl();
+    bodySb.i(2).p("final int cols = ACTIVATION[i-1].length;").nl();
+    if (maxout) {
+      bodySb.i(2).p("float cmax = Float.NEGATIVE_INFINITY;").nl();
+    }
+    bodySb.i(2).p("for (int c=0; c<cols; ++c) {").nl();
+    if (!maxout) {
+      bodySb.i(3).p("ACTIVATION[i][r] += ACTIVATION[i-1][c] * WEIGHT[i][r*cols+c];").nl();
+    } else {
+      bodySb.i(3).p("if (i<ACTIVATION.length-1) cmax = Math.max(ACTIVATION[i-1][c] * WEIGHT[i][r*cols+c], cmax);").nl();
+      bodySb.i(3).p("else ACTIVATION[i][r] += ACTIVATION[i-1][c] * WEIGHT[i][r*cols+c];").nl();
+    }
+    bodySb.i(2).p("}").nl();
+    if (maxout) {
+      bodySb.i(2).p("if (i<ACTIVATION.length-1) ACTIVATION[i][r] = Float.isInfinite(cmax) ? 0f : cmax;").nl();
+    }
+    bodySb.i(2).p("ACTIVATION[i][r] += BIAS[i][r];").nl();
+    if (maxout) {
+      bodySb.i(2).p("if (i<ACTIVATION.length-1) rmax = Math.max(rmax, ACTIVATION[i][r]);").nl();
+    }
+    bodySb.i(1).p("}").nl();
+
+    if (!maxout) bodySb.i(1).p("if (i<ACTIVATION.length-1) {").nl();
+    bodySb.i(2).p("for (int r=0; r<ACTIVATION[i].length; ++r) {").nl();
+    if (tanh) {
+      bodySb.i(3).p("ACTIVATION[i][r] = 1f - 2f / (1f + (float)Math.exp(2*ACTIVATION[i][r]));").nl();
+    } else if (relu) {
+      bodySb.i(3).p("ACTIVATION[i][r] = Math.max(0f, ACTIVATION[i][r]);").nl();
+    } else if (maxout) {
+      bodySb.i(3).p("if (rmax > 1 ) ACTIVATION[i][r] /= rmax;").nl();
+    }
+    if (get_params().hidden_dropout_ratios != null) {
+      if (maxout) bodySb.i(1).p("if (i<ACTIVATION.length-1) {").nl();
+      bodySb.i(3).p("ACTIVATION[i][r] *= HIDDEN_DROPOUT_RATIOS[i-1];").nl();
+      if (maxout) bodySb.i(1).p("}").nl();
+    }
+    bodySb.i(2).p("}").nl();
+    if (!maxout) bodySb.i(1).p("}").nl();
+    if (isClassifier()) {
+      bodySb.i(1).p("if (i == ACTIVATION.length-1) {").nl();
+      // softmax
+      bodySb.i(2).p("float max = ACTIVATION[i][0];").nl();
+      bodySb.i(2).p("for (int r=1; r<ACTIVATION[i].length; r++) {").nl();
+      bodySb.i(3).p("if (ACTIVATION[i][r]>max) max = ACTIVATION[i][r];").nl();
+      bodySb.i(2).p("}").nl();
+      bodySb.i(2).p("float scale = 0f;").nl();
+      bodySb.i(2).p("for (int r=0; r<ACTIVATION[i].length; r++) {").nl();
+      bodySb.i(3).p("ACTIVATION[i][r] = (float) Math.exp(ACTIVATION[i][r] - max);").nl();
+      bodySb.i(3).p("scale += ACTIVATION[i][r];").nl();
+      bodySb.i(2).p("}").nl();
+      bodySb.i(2).p("for (int r=0; r<ACTIVATION[i].length; r++) {").nl();
+      bodySb.i(3).p("if (Float.isNaN(ACTIVATION[i][r]))").nl();
+      bodySb.i(4).p("throw new RuntimeException(\"Numerical instability, predicted NaN.\");").nl();
+      bodySb.i(3).p("ACTIVATION[i][r] /= scale;").nl();
+      bodySb.i(3).p("preds[r+1] = ACTIVATION[i][r];").nl();
+      bodySb.i(2).p("}").nl();
+      bodySb.i(1).p("}").nl();
+      bodySb.i().p("}").nl();
+    } else {
+      bodySb.i().p("}").nl();
+      // regression: set preds[1], FillPreds0 will put it into preds[0]
+      if (model_info().data_info()._normRespMul != null) {
+        bodySb.i().p("preds[1] = (float) (ACTIVATION[ACTIVATION.length-1][0] / NORMRESPMUL[0] + NORMRESPSUB[0]);").nl();
+      }
+      else {
+        bodySb.i().p("preds[1] = ACTIVATION[ACTIVATION.length-1][0];").nl();
+      }
+      bodySb.i().p("if (Float.isNaN(preds[1])) throw new RuntimeException(\"Predicted regression target NaN!\");").nl();
+    }
+
+    fileCtxSb.p(model);
+    toJavaUnifyPreds(bodySb);
+    toJavaFillPreds0(bodySb);
+  }
 }
 
